GNOME Bugzilla – Bug 743580
query_fs_info crash when file not found
Last modified: 2015-01-27 16:04:01 UTC
Created attachment 295537 [details] [review] fix query_fs_info crash when file not found The query_fs_info function isn't returned after g_vfs_job_failed_literal, therefore g_vfs_job_succeeded is executed and it fails on assert. Truncated backtrace: Thread no. 1 (6 frames) #2 _g_log_abort at /lib64/libglib-2.0.so.0 #5 g_vfs_job_emit_finished #6 _g_closure_invoke_va at /lib64/libgobject-2.0.so.0 #9 do_query_fs_info #10 g_vfs_job_run #12 g_thread_proxy at /lib64/libglib-2.0.so.0 Downstream bugreports: https://bugzilla.redhat.com/show_bug.cgi?id=1071526 https://bugzilla.redhat.com/show_bug.cgi?id=1178317
Review of attachment 295537 [details] [review]: Thanks!
Comment on attachment 295537 [details] [review] fix query_fs_info crash when file not found Thanks for review! Committed to master (dc8db93), gnome-3-14 (38f2ea9), gnome-3-12 (595baef) and gnome-3-10 (6551cd4) branch.