mtp: fix query_fs_info crash when file not found

The function isn't returned after g_vfs_job_failed_literal, therefore
g_vfs_job_succeeded is executed and it fails on assert.

https://bugzilla.gnome.org/show_bug.cgi?id=743580